map+instruction layout changes and no stategon fix
the map and instruction layouts have been changed to fit better in the given space.
also fixed an bug resulting from a marker drop returning to stategon (because it's
out of bounds)

--- a/inc/css/iwjvmap.css
+++ b/inc/css/iwjvmap.css
@@ -45,8 +45,6 @@ h1, h2{
     float:left;
     position:relative;
     top:5px;
-    width: 750px;
-    height: 500px;
     border: 1px solid black;
     z-index:1;
 }
@@ -178,7 +176,7 @@ th.before, td.before {
 }
 /*Text for intro, bird info, and error messages*/
 #mapSidebarRightContainer {
-    font-size: 1.0em;
+    font-size: 14px;
     margin-left: 755px;
 }
 
